[gd_scene load_steps=5 format=3 uid="uid://c2mrodj0y14bn"]

[ext_resource type="PackedScene" uid="uid://d014vgxvr7gof" path="res://scenes/ui/space_bckg.tscn" id="1_6qt6u"]
[ext_resource type="Script" path="res://scripts/game_over.gd" id="1_rl1sq"]
[ext_resource type="FontFile" uid="uid://3d0ky5eghpsr" path="res://assets/fonts/ModernWarfare-OV7KP.ttf" id="2_et8w4"]
[ext_resource type="PackedScene" uid="uid://dalsnnlrqqb5q" path="res://scenes/ui/joueur_ui.tscn" id="4_3amr3"]

[node name="game_over" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rl1sq")

[node name="space_bckg" parent="." instance=ExtResource("1_6qt6u")]

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 335.0
offset_top = 110.0
offset_right = 812.0
offset_bottom = 240.0
theme_override_fonts/font = ExtResource("2_et8w4")
theme_override_font_sizes/font_size = 60
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 336.0
offset_top = 176.0
offset_right = 813.0
offset_bottom = 306.0
theme_override_fonts/font = ExtResource("2_et8w4")
theme_override_font_sizes/font_size = 30
text = "vous avez perdu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="joueur_ui" parent="." instance=ExtResource("4_3amr3")]
position = Vector2(253, 349)

[node name="joueur_ui2" parent="." instance=ExtResource("4_3amr3")]
position = Vector2(901, 346)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 440.0
offset_top = 299.0
offset_right = 732.0
offset_bottom = 456.0
alignment = 1

[node name="menu_principal" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "Menu principal
"

[node name="rejouer" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "Rejouer"

[node name="quitter" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "Quitter"

[connection signal="pressed" from="VBoxContainer/menu_principal" to="." method="_on_menu_principal_pressed"]
[connection signal="pressed" from="VBoxContainer/rejouer" to="." method="_on_rejouer_pressed"]
[connection signal="pressed" from="VBoxContainer/quitter" to="." method="_on_quitter_pressed"]
